# go-icndb

./: .dockerignore  .gitignore  .ko.yaml  BUILD.bazel  Dockerfile  Gopkg.toml  Makefile  README.md  WORKSPACE  app.go  benchmark_build.sh  go.mod  go.sum  main.go  model.go  packr-hack.go  up.sh  update-server.sh
.github/workflows/: go.yml
api/health/: handler.go
api/jokes/: handler.go  jokes.go  jokes.json  models.go
api/observability/: handler.go
api/swagger/: handler.go
api/swagger/templates/: swagger-initializer.tmpl.js
assets/: assets.go  jokes.json
assets/api/: swagger.json  swagger.yml
assets/app/: jokes.json
cmd/icndb-server/: BUILD.bazel  main.go
internal/logging/: flag.go  request.go
internal/metrics/: request.go
internal/pkg/metrics/: app_metrics.go
internal/pkg/models/: BUILD.bazel  fact.go  init.go
magefiles/: swagger_ui.go
models/: BUILD.bazel  count_response.go  deploy_env_response.go  fact_response.go  hostname_response.go  ip_addresses_response.go
restapi/: BUILD.bazel  configure_icndb.go  doc.go  embedded_spec.go  server.go
restapi/handlers/: BUILD.bazel  deploy_info_handler.go  health_handler.go  jokes_handler.go  system_information_handler.go
restapi/operations/: BUILD.bazel  get_deploy_env.go  get_deploy_env_parameters.go  get_deploy_env_responses.go  get_deploy_env_urlbuilder.go  get_health.go  get_health_responses.go  get_health_urlbuilder.go  get_hostname.go  get_hostname_responses.go  get_hostname_urlbuilder.go  get_ip_addresses.go  get_ip_addresses_parameters.go  get_ip_addresses_responses.go  get_ip_addresses_urlbuilder.go  get_joke_by_id.go  get_joke_by_id_parameters.go  get_joke_by_id_responses.go  get_joke_by_id_urlbuilder.go  get_jokes_count.go  get_jokes_count_parameters.go  get_jokes_count_responses.go  get_jokes_count_urlbuilder.go  get_random_joke.go  get_random_joke_parameters.go  get_random_joke_responses.go  get_random_joke_urlbuilder.go  i_c_n_d_b_api.go  icndb_api.go  prometheus_metrics.go
