load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "configure_icndb.go",
        "doc.go",
        "embedded_spec.go",
        "server.go",
    ],
    importpath = "github.com/baez90/go-icndb/restapi",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/pkg/models:go_default_library",
        "//restapi/handlers:go_default_library",
        "//restapi/operations:go_default_library",
        "//vendor/github.com/go-openapi/errors:go_default_library",
        "//vendor/github.com/go-openapi/runtime:go_default_library",
        "//vendor/github.com/go-openapi/runtime/flagext:go_default_library",
        "//vendor/github.com/go-openapi/runtime/middleware:go_default_library",
        "//vendor/github.com/go-openapi/swag:go_default_library",
        "//vendor/github.com/gobuffalo/packr:go_default_library",
        "//vendor/github.com/jessevdk/go-flags:go_default_library",
        "//vendor/github.com/joonix/log:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/golang.org/x/net/netutil:go_default_library",
    ],
)
