load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/baez90/go-icndb/cmd/icndb-server",
    visibility = ["//visibility:private"],
    deps = [
        "//restapi:go_default_library",
        "//restapi/operations:go_default_library",
        "//vendor/github.com/go-openapi/loads:go_default_library",
        "//vendor/github.com/jessevdk/go-flags:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_binary(
    name = "icndb-server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
