load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "get_deploy_env.go",
        "get_deploy_env_parameters.go",
        "get_deploy_env_responses.go",
        "get_deploy_env_urlbuilder.go",
        "get_health.go",
        "get_health_parameters.go",
        "get_health_responses.go",
        "get_health_urlbuilder.go",
        "get_hostname.go",
        "get_hostname_parameters.go",
        "get_hostname_responses.go",
        "get_hostname_urlbuilder.go",
        "get_ip_addresses.go",
        "get_ip_addresses_parameters.go",
        "get_ip_addresses_responses.go",
        "get_ip_addresses_urlbuilder.go",
        "get_joke_by_id.go",
        "get_joke_by_id_parameters.go",
        "get_joke_by_id_responses.go",
        "get_joke_by_id_urlbuilder.go",
        "get_jokes_count.go",
        "get_jokes_count_parameters.go",
        "get_jokes_count_responses.go",
        "get_jokes_count_urlbuilder.go",
        "get_random_joke.go",
        "get_random_joke_parameters.go",
        "get_random_joke_responses.go",
        "get_random_joke_urlbuilder.go",
        "i_c_n_d_b_api.go",
    ],
    importpath = "github.com/baez90/go-icndb/restapi/operations",
    visibility = ["//visibility:public"],
    deps = [
        "//models:go_default_library",
        "//vendor/github.com/go-openapi/errors:go_default_library",
        "//vendor/github.com/go-openapi/loads:go_default_library",
        "//vendor/github.com/go-openapi/runtime:go_default_library",
        "//vendor/github.com/go-openapi/runtime/middleware:go_default_library",
        "//vendor/github.com/go-openapi/runtime/security:go_default_library",
        "//vendor/github.com/go-openapi/spec:go_default_library",
        "//vendor/github.com/go-openapi/strfmt:go_default_library",
        "//vendor/github.com/go-openapi/swag:go_default_library",
    ],
)
